src/objects/KeyManagement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Apps__c</fullName>
        <label>Apps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Masterkey__c</fullName>
        <label>Masterkey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserKey__c</fullName>
        <label>UserKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>KeyManagement</label>
</CustomObject>